Fix auto-lightbox; add entry-header spacing

--- a/wp-content/themes/kaelri/sass/main.scss
+++ b/wp-content/themes/kaelri/sass/main.scss
@@ -298,6 +298,10 @@ blockquote {
 	}
 }
 
+.entry-header {
+	margin-bottom: 1em;
+}
+
 .entry-title {
 	margin: 0;
 	font-size: var(--entry-title-size);
